[init] create resources
