# internal/domain/resource.go
@@ -1,0 +1,8 @@
+package domain
+
+type Resource struct {
+	Name        string
+	Image       string
+	ServiceName string
+	State       serviceState
+}
